# pyfx_dispatch_oanda

./: .gitattributes  .gitignore  .gitlab-ci.yml  .travis.yml  COPYING  GNUmakefile  Makefile  README.endpoints.md  README.md  README.models.md  project.py  pyproject.toml  requirements.in  setup.py  test-requirements.txt  tox.ini
.github/workflows/: python.yml
.openapi-generator/: FILES
docs/: AcceptDatetimeFormat.md  Account.md  AccountChanges.md  AccountChangesState.md  AccountFinancingMode.md  AccountProperties.md  AccountSummary.md  CalculatedAccountState.md  CalculatedPositionState.md  CalculatedTradeState.md  CancelOrder200Response.md  CancelOrder404Response.md  CancellableOrderType.md  Candlestick.md  CandlestickData.md  CandlestickGranularity.md  ClientConfigureRejectTransaction.md  ClientConfigureTransaction.md  ClientExtensions.md  ClientPrice.md  ClosePosition200Response.md  ClosePosition400Response.md  ClosePosition404Response.md  ClosePositionRequest.md  CloseTrade200Response.md  CloseTrade400Response.md  CloseTrade404Response.md  CloseTradeRequest.md  CloseTransaction.md  ConfigureAccount200Response.md  ConfigureAccount400Response.md  ConfigureAccountRequest.md  CreateOrder201Response.md  CreateOrder400Response.md  CreateOrder404Response.md  CreateOrderRequest.md  CreateTransaction.md  DailyFinancingTransaction.md  DefaultApi.md  DelayedTradeClosureTransaction.md  (+156 more)
examples/: .gitignore  README.md  quotes.py  quotes_app.py  quotes_async.py  summary_app.py
pyfx/dispatch/oanda/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
pyfx/dispatch/oanda/api/: __init__.py  default_api.py
pyfx/dispatch/oanda/models/: __init__.py  accept_datetime_format.py  account.py  account_changes.py  account_changes_state.py  account_financing_mode.py  account_properties.py  account_summary.py  calculated_account_state.py  calculated_position_state.py  calculated_trade_state.py  cancel_order200_response.py  cancel_order404_response.py  cancellable_order_type.py  candlestick.py  candlestick_data.py  candlestick_granularity.py  client_configure_reject_transaction.py  client_configure_transaction.py  client_extensions.py  client_price.py  close_position200_response.py  close_position400_response.py  close_position404_response.py  close_position_request.py  close_trade200_response.py  close_trade400_response.py  close_trade404_response.py  close_trade_request.py  close_transaction.py  configure_account200_response.py  configure_account400_response.py  configure_account_request.py  create_order201_response.py  create_order400_response.py  create_order404_response.py  create_order_request.py  create_transaction.py  daily_financing_transaction.py  delayed_trade_closure_transaction.py  (+156 more)
src/pyfx/dispatch/oanda/: __init__.py  api_client.py  api_response.py  config_manager.py  configuration.py  credential.py  debug_logger.ini  exceptions.py  exec_controller.py  finalizable.py  fx_const.py  hosts.py  logging.py  mapped_enum.py  parser.py  request_constants.py  response_common.py  rest.py  test.py
src/pyfx/dispatch/oanda/api/: __init__.py  default_api.py  param_info.py  price_component.py  request_base.py  transport_client.py
src/pyfx/dispatch/oanda/app/: storage_controller.py
src/pyfx/dispatch/oanda/indicator/: cols.py  common.py  filter.py  price.py  smoothed.py
src/pyfx/dispatch/oanda/io/: __init__.py  segment.py
src/pyfx/dispatch/oanda/kernel/: cols.py  fx_const.py  indicator.py
src/pyfx/dispatch/oanda/models/: __init__.py  accept_datetime_format.py  account.py  account_changes.py  account_changes_state.py  account_financing_mode.py  account_mixins.py  account_properties.py  account_summary.py  api_enum.py  calculated_account_state.py  calculated_position_state.py  calculated_trade_state.py  cancel_order200_response.py  cancel_order404_response.py  cancellable_order_type.py  candlestick.py  candlestick_data.py  candlestick_granularity.py  client_configure_reject_transaction.py  client_configure_transaction.py  client_extensions.py  client_price.py  close_position200_response.py  close_position400_response.py  close_position404_response.py  close_position_request.py  close_trade200_response.py  close_trade400_response.py  close_trade404_response.py  close_trade_request.py  close_transaction.py  common_types.py  configure_account200_response.py  configure_account400_response.py  configure_account_request.py  (+189 more)
test/: __init__.py  pytest.ini  test_accept_datetime_format.py  test_account.py  test_account_changes.py  test_account_changes_state.py  test_account_financing_mode.py  test_account_properties.py  test_account_summary.py  test_calculated_account_state.py  test_calculated_position_state.py  test_calculated_trade_state.py  test_cancel_order200_response.py  test_cancel_order404_response.py  test_cancellable_order_type.py  test_candlestick.py  test_candlestick_data.py  test_candlestick_granularity.py  test_client_configure_reject_transaction.py  test_client_configure_transaction.py  test_client_extensions.py  test_client_price.py  test_close_position200_response.py  test_close_position400_response.py  test_close_position404_response.py  test_close_position_request.py  test_close_trade200_response.py  test_close_trade400_response.py  test_close_trade404_response.py  test_close_trade_request.py  test_close_transaction.py  test_cofutures.py  test_configuration.py  test_configure_account200_response.py  test_configure_account400_response.py  test_configure_account_request.py  test_create_order201_response.py  test_create_order400_response.py  test_create_order404_response.py  test_create_order_request.py  (+168 more)
test/json_samples/: GetAccountInstruments200Response.json  GetInstrumentCandles200Response.json  GetTransactionRange200Response.json  ListOrders200Response.json  ListTrades200Response.json
test/sample_data/: GetAccount200Response.json  GetAccountCandlesLatest200Response.json  GetAccountSummary200Response.json  ListAccounts200Response.json  quotes.npz
test/test_ta/: test_filter_price.py  test_filter_smoothed.py
test/test_util/: test_ndata.py
(+40 files in other folders)
