[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.urls]
Home = "https://github.com/fxtatools/pyfx_dispatch_oanda"

[project]
name = "pyfx.dispatch.oanda"
version = "1.0.1"
description = "aio support for OANDA v20 REST API (Unofficial)"
authors = [{ name = "Sean Champ", email = "spchamp@users.noreply.github.com" }]
license = { file = "COPYING" }
readme = "README.md"
keywords = ["OpenAPI", "OpenAPI-Generator", "OANDA v20 REST API"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Private :: Do not Upload",
]
dependencies = [
    "aenum >=3.1.11",
    "aioconsole",
    "certifi",
    "httpcore[http2]",
    "httpx[http2] >= 0.24.1",
    "ijson",
    "isocodes",
    "numpy",
    "pandas",
    "pydantic >2, <3",
    "python-dateutil >=2.8.2",
    "pyyaml",
    "typing_extensions",
    "immutables >= 0.20",
    "BTrees >= 5.1.0",
    "ZODB >= 5.8.1",
]
requires-python = ">= 3.11.0, < 3.12"

[project.optional-dependencies]
socks = ["httpx[socks]", "socksio"]
app-common = ["NumPy>=1.5", "QtPy>=1.3", "PythonQwt", "mplfinance", "ipython"]
app-pyqt5 = ["pyfx.dispatch.oanda[app-common]", "PyQt5"]
app-pyqt6 = ["pyfx.dispatch.oanda[app-common]", "PyQt6"]
## pyside2: limited support for tests on Windows,
## outside Python 3.9
app-pyside2 = ["pyfx.dispatch.oanda[app-common]", "PySide2"]
app-pyside6 = ["pyfx.dispatch.oanda[app-common]", "PySide6"]
dev = [
    "autopep8",
    "black",
    "line_profiler",
    "pytest >= 7.2.1",
    "assertpy",
    "pytest-dependency",
    "flake8 >=4.0.0",
    "Flake8-pyproject",
    "ipython",
    "jedi>=0.19.1",
    "polyfactory",
    # attrs: a dependency for polyfactory (19.6.2)
    "attrs",
    "pip-tools",
    "mypy",
    "types-pytz",
    "types-PyYAML",
]

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["pyfx.dispatch.oanda.test"]
namespaces = true

[tool.pytest.ini_options]
testpaths = ["test"]

[tool.pylint.'MESSAGES CONTROL']
extension-pkg-whitelist = "pydantic"
max_line_length = 127
# ...
disable = """
    consider-using-dict-items,
    wrong-import-order
"""

[tool.flake8]
ignore = [
    "E117","E127","E128","E203","E251","E252","E261",
    "E262", "E266","W291","E302","E303","E402","E501"
    ]
