[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.urls]
Home = "https://github.com/fxtatools/pyfx_dispatch_oanda"

[project]
name = "pyfx.dispatch.oanda"
version = "1.0.1"
description = "aio support for OANDA v20 REST API (Unofficial)"
authors = [
    { name = "Sean Champ", email = "spchamp@users.noreply.github.com" }
]
license = { file = "COPYING" }
readme = "README.md"
keywords = ["OpenAPI", "OpenAPI-Generator", "OANDA v20 REST API"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Private :: Do not Upload"
]
dependencies = [
    "aenum >= 3.1.11",
    "appdirs",
    "aioconsole",
    "certifi",
    "currency-symbols",
    "httpcore[http2]",
    "httpx[http2] >= 0.24.1",
    "ijson",
    "importlib_metadata",
    "isocodes",
    "numpy",
    "pandas",
    "prompt_toolkit >= 3.0.0",
    "pydantic >2, <3",
    "python-dateutil >= 2.8.2",
    "pyyaml",
    "pytz",
    "typing_extensions",
    "immutables >= 0.20",
    "BTrees >= 5.1.0",
    "uvloop; platform_system != 'Windows'",
    "ZODB >= 5.8.1",
    "zope.password",
]
requires-python = ">= 3.11.0, < 3.12"

[project.optional-dependencies]
typing = [
    "pandas-stubs",
    "pytz-stubs",
    "dateutils-stubs",
    "types-pytz",
    "types-PyYAML",
    "types-python-dateutil",
    "types-appdirs",
    "yaml-stubs"
]
socks = ["httpx[socks]", "socksio"]

dev = [
    "pyfx.dispatch.oanda[typing]",
    "autopep8",
    "black",
    "line_profiler",
    "pytest >= 7.2.1",
    "pytest-asyncio",
    "assertpy",
    "pytest-dependency",
    "flake8 >=4.0.0",
    "Flake8-pyproject",
    "ipython",
    "jedi>=0.19.1",
    "keyring >= 24.1.1",
    "polyfactory",
    # attrs: a dependency for polyfactory (19.6.2)
    "attrs",
    "pip-tools",
    "mypy"
]

[tool.mypy]
check_untyped_defs = true

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["pyfx.dispatch.oanda.test"]
namespaces = true

[tool.pytest.ini_options]
testpaths = ["test"]

[tool.pylint.'MESSAGES CONTROL']
extension-pkg-whitelist = "pydantic"
max_line_length = 127
# ...
disable = """
    consider-using-dict-items,
    wrong-import-order
"""

[tool.flake8]
ignore = [
    "E117","E127","E128","E203","E251","E252","E261",
    "E262", "E266","W291","E302","E303","E402","E501"
    ]
