[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.urls]
Home = "https://github.com/fxtatools/pyfx_dispatch_oanda"

[project]
name = "pyfx.dispatch.oanda"
version = "1.0.1"
requires-python = ">= 3.9"
description = "aio support for OANDA v20 REST API (Unofficial)"
authors = [
    { name = "Sean Champ", email = "spchamp@users.noreply.github.com" }
]
license = { file = "COPYING" }
readme = "README.md"
keywords = ["OpenAPI", "OpenAPI-Generator", "OANDA v20 REST API"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Private :: Do not Upload"
]
dependencies = [
    "aenum >= 3.1.11",
    "anyio >= 3.0.0",
    "appdirs",
    "aioconsole",
    "certifi",
    "click",
    "currency-symbols",
    "exceptiongroup > 1.1.0",
    "httpcore[http2] >= 1.0.2",
    "httpx[http2] >= 0.25.1",
    "ijson",
    "immutables >= 0.20",
    "importlib_metadata",
    "isocodes",
    "numpy",
    "pandas",
    "prompt_toolkit >= 3.0.0",
    "pydantic >2, <3",
    "python-dateutil >= 2.8.2",
    "pyyaml",
    "quattro >= 23.1.0",
    "typing_extensions",
    "tzdata",
    "tzlocal",
    "uvloop; platform_system != 'Windows'",
    "ZODB >= 5.8.0",
    "zope.password",
    "persistent >= 5.0.0",
    "transaction >= 3.1.0"
]

[project.optional-dependencies]
typing = [
    "pandas-stubs",
    "types-PyYAML",
    "types-python-dateutil",
    "types-appdirs",
]
socks = ["httpx[socks]", "socksio"]

dev = [
    "numba",
    "tox",
    "pyfx.dispatch.oanda[typing]",
    "assertpy",
    # attrs: a dependency for polyfactory (19.6.2)
    "attrs",
    "autopep8",
    "black",
    "flake8 >=4.0.0",
    "Flake8-pyproject",
    "ipython",
    "jedi>=0.19.1",
    "keyring >= 24.1.1",
    "line_profiler",
    "mypy > 1.1.0",
    "pip-tools",
    "polyfactory",
    "pytest >= 7.2.1",
    "pytest-asyncio",
    "pytest-dependency",
]

[tool.mypy]
check_untyped_defs = true
disable_error_code = ["import-untyped"]
plugins = ["numpy.typing.mypy_plugin"] # ? syntax here ? https://numpy.org/doc/1.21/reference/typing.html#numpy.typing.ArrayLike

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["pyfx.dispatch.oanda.test"]
namespaces = true

[tool.pytest.ini_options]
testpaths = ["test"]

[tool.pylint.'MESSAGES CONTROL']
extension-pkg-whitelist = "pydantic"
max_line_length = 127
# ...
disable = """
    consider-using-dict-items,
    wrong-import-order
"""

[tool.flake8]
ignore = [
    "E117","E127","E128","E203","E251","E252","E261",
    "E262", "E266","W291","E302","E303","E402","E501"
    ]
